lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-25.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 保存食
  - 保存食
  - 20681
