lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-26.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 信じられない
  - 信じる
  - 279
