lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-27.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - そう
  - そう
  - 31
- - 考えれば
  - 考え
  - 884
