lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-5.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - ついて
  - ついて
  - 33253
