lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-6.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - たとえ
  - たとえ
  - 1205
- - 雨
  - 雨
  - 956
- - が
  - が
  - 4
- - 降って
  - 降る
  - 1659
- - も
  - も
  - 8
- - 外に
  - 外に
  - ~
- - 出よう
  - 出る
  - 81
