lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-8.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 漬けこんで
  - 漬けこむ
  - 24349
- - やろう
  - やる
  - 46
