lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions-9.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 臭くない
  - 臭い
  - 3800
