lib/rust/language_pack_jp/tests/snapshots/r#mod__check_regressions.snap
---
source: lib/rust/language_pack_jp/tests/mod.rs
expression: result
---
- - 響いてた
  - 響く
  - 867
